[gd_scene load_steps=5 format=2]

[ext_resource path="res://Arrow.gd" type="Script" id=1]
[ext_resource path="res://assets/img/entety/arrow.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Arrow" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Arrow_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_Timer_timeout"]
